--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "icons": [
         {
             "src": "icon.svg",
-            "type": "iamge/svg",
+            "type": "image/svg",
             "sizes": "512x512"
         }
     ],
