--- a/fontello/config.json
+++ b/fontello/config.json
@@ -41,6 +41,12 @@
       "css": "settings",
       "code": 59396,
       "src": "fontawesome"
+    },
+    {
+      "uid": "3d4ea8a78dc34efe891f3a0f3d961274",
+      "css": "info",
+      "code": 61737,
+      "src": "fontawesome"
     }
   ]
 }
