--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Simulate Natural Selection",
-    "short": "Sinase!",
+    "short": "Sinase",
     "icons": [
         {
             "src": "icon.png",
